@@ -1,6 +1,7 @@
 package projet.wcs.starter.convertors;
 
 import org.modelmapper.AbstractConverter;
+import projet.wcs.starter.dao.Room;
 import projet.wcs.starter.dao.Sneakers;
 
 import java.util.List;
@@ -13,6 +14,6 @@ public class SneakersListConvertor extends AbstractConverter<List<Sneakers>, Lis
         return sneakers
                 .stream()
                 .map(Sneakers::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
